// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem:  should render 1`] = `
<a
  className=""
<<<<<<< HEAD:src/components/pieChart/tests/__snapshots__/LegendItem.test.js.snap
  onClick={[Function]}
=======
  handleClick={[MockFunction]}
  onClick={[MockFunction]}
>>>>>>> Updated snapshots affected by Jest v22 upgrade with Function ~> MockFunction:src/pages/reports/bounce/components/tests/__snapshots__/LegendItem.test.js.snap
  title="View name"
>
  <span
    style={
      Object {
        "backgroundColor": "#000",
      }
    }
  />
  <span>
    name
    <Icon
      name="ChevronRight"
      size={18}
    />
  </span>
  <span>
    2
  </span>
</a>
`;

exports[`LegendItem:  should render breadcrumb 1`] = `
<a
  className=""
<<<<<<< HEAD:src/components/pieChart/tests/__snapshots__/LegendItem.test.js.snap
  onClick={[Function]}
=======
  handleClick={[MockFunction]}
  onClick={[MockFunction]}
>>>>>>> Updated snapshots affected by Jest v22 upgrade with Function ~> MockFunction:src/pages/reports/bounce/components/tests/__snapshots__/LegendItem.test.js.snap
  title="View name"
>
  <span
    style={
      Object {
        "backgroundColor": "#000",
      }
    }
  />
  <Icon
    name="ChevronLeft"
    size={18}
  />
  <span>
    name
    <Icon
      name="ChevronRight"
      size={18}
    />
  </span>
  <span>
    2
  </span>
</a>
`;
